# poc-ai-development

./: .env  README.md  pyproject.toml
src/poc_ai_development/: crew.py  main.py
