[project]
name = "poc_ai_development"
version = "0.1.0"
description = "poc-ai-development using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
poc_ai_development = "poc_ai_development.main:run"
run_crew = "poc_ai_development.main:run"
train = "poc_ai_development.main:train"
replay = "poc_ai_development.main:replay"
test = "poc_ai_development.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
